AM_CFLAGS =
AM_LDFLAGS =
bin_PROGRAMS =

bin_PROGRAMS += array_size
array_size_SOURCES = array_size.c

bin_PROGRAMS += atoi
atoi_SOURCES = atoi.c

bin_PROGRAMS += example
example_SOURCES = example.c

bin_PROGRAMS += memcpy
memcpy_SOURCES = memcpy.c

bin_PROGRAMS += strcpy
strcpy_SOURCES = strcpy.c

bin_PROGRAMS += strtol
strtol_SOURCES = strtol.c
